# xerces-beispiel

./: .gitignore  CMakeLists.txt  PITCHME.md  people.xml  people.xsd  synthesis.cpp  xerces.cpp
